--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -30,9 +30,9 @@
 					</strong>
 				</h3>
 				<h4 style="text-align:center;">
-					{{class.start_time_str}}
+					{{class.startTimeStr}}
 					-
-					{{class.end_time_str}}
+					{{class.endTimeStr}}
 				</h4>
 				<hr>
 				<h4>Curriculum</h4>
