--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -180,9 +180,9 @@
             <strong>
               {{class.day}}s
             </strong>
-            {{class.start_time_str}} 
+            {{class.startTimeStr}} 
             - 
-            {{class.end_time_str}}
+            {{class.endTimeStr}}
           </p>
           <p style="text-align:justify;">
             {{club.description | limitTo : 300 : 0}}
